# Zapfiles

./: .gitignore  AUTHORS  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac  fileutil.c  mktestdata  zapfiles.1  zapfiles.c
